Installing curl and openssl.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -4,7 +4,8 @@
 FROM ubuntu:trusty
 RUN apt-get update
 RUN apt-get -y install ruby ruby-dev build-essential git
-# RUN apt-get install -y libopenssl-ruby libxslt-dev libxml2-dev
+RUN apt-get install -y openssl
+RUN apt-get install -y curl
 
 # For debugging
 RUN apt-get install -y gdb strace
